--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
 
 :root{
     --color1: #f4f4fd;
+    --color2: #8e8f99;
+    --color3: #404bbf;
 }
 
 body{
@@ -514,45 +516,58 @@ input, button{
     background-color: #31d0aa;
 }
 
-.form-footer{
+.form-footer-block{
     max-width: 453px;
-    display: flex;
+    height: 80px;
     gap: 24px;
-    justify-content: space-between;
 }
 
-.form-footer-label{
+.form-footer{
+    max-width: 453px;
+    gap: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form-footer-p{
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #FFF;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+    margin-bottom: 16px;
 }
 
 .form-footer-input{
     border-radius: 4px;
     border: 1px solid #FFF;
+    background-color: transparent; 
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     background-color: #2E2F42;
     color: #FFF;
     box-sizing: border-box;
-    max-width: 264px;
-    max-height: 40px;
+    width: 264px;
+    height: 40px;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 16px;
     padding-right: 212px;
     font-size: 12px;
-    line-height: 2;
+    line-height: 1.5;
     letter-spacing: 0.04em;
+}
+
+.form-footer-input::placeholder{
+    color:  #ffffff;
 }
 
 .form-footer-btn{
     display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
     padding: 8px 24px;
     gap: 16px;
     border-radius: 4px;
@@ -562,22 +577,27 @@ input, button{
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #FFF;
-    text-align: center;
-    max-width: 165px;
-    max-height: 40px;
+    min-width: 165px;
+    height: 40px;
     cursor: pointer;
-    margin-top: 40px;
+    margin-left: 287px;
+    top: 5px;
+    font-family: "Roboto", sans-serif;
+    border: none;
 }
 
 /* ============== BACKDROP ============== */
 .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     opacity: 0;
-    visibility: hidden;
     pointer-events: none;
-    transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .backdrop.is-open {
@@ -589,14 +609,16 @@ input, button{
   /* ============== MODAL ============== */
 .modal {
     position: absolute;
-    top: 81%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 584px;
     background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 72px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -605,23 +627,30 @@ input, button{
     right: 24px;
     width: 24px;
     height: 24px;
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    line-height: 0;
-    stroke: #111111;
-    transition: stroke 250ms linear;
-    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #E7E9FC;
-    stroke-width: 1px;
-    stroke: rgba(0, 0, 0, 0.10);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
-    stroke: #4D5AE5;
-    
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-close-btn-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn-icon:hover,
+.modal-close-btn-icon:focus{
+    fill: #ffffff;
 }
 
 .review-form-description {
@@ -644,6 +673,7 @@ input, button{
     line-height: 1.17;
     letter-spacing: 0.04em;
     margin-bottom: 4px;
+    color: var(--color2);
 }
 
 .review-form-input-wrapper {
@@ -658,7 +688,8 @@ input, button{
     background-color: transparent;
     transition: border-color 250ms linear;
     outline: 0px solid transparent;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-left: 38px;
 }
 
 .review-form-input:focus {
@@ -668,14 +699,23 @@ input, button{
 .review-form-input-icon {
     position: absolute;
     top: 50%;
-    left: 24px;
+    /* left: 24px; */
+    left: 16px;
     transform: translateY(-50%);
     stroke: #404040;
-    transition: stroke 250ms linear;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input-icon:focus{
+    fill: #4D5AE5;
 }
 
 .review-form-input:focus + .review-form-input-icon {
     stroke: #4D5AE5;
+}
+
+.form-comment{
+    margin-bottom: 16px;
 }
 
 .review-form-comment {
@@ -690,7 +730,7 @@ input, button{
     background-color: transparent;
     padding: 8px 16px;
     resize: none;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     outline: 0px solid transparent;
 }
 
@@ -704,6 +744,15 @@ input, button{
 
 .review-form-checkbox-wrapper {
     margin-bottom: 24px;
+}
+
+.review-form-checkbox:checked{
+    background-color: var(--color3);
+}
+
+.review-form-own-checkbox:checked{
+    border: none;
+    fill: var(--color1);
 }
 
 .review-form-checkbox-label {
@@ -730,9 +779,11 @@ input, button{
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.40);
-    border-radius: 4px;
+    border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
 }
 
 .review-form-checkbox:checked
@@ -773,12 +824,15 @@ input, button{
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    margin-left: 100px;  
+    margin-left: 100px;
+    display: block;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .review-form-submit-btn:hover,
 .review-form-submit-btn:focus {
-    background-color: #FFFFFF;
+    /* fill: #ffffff; */
     color: #4D5AE5;
 }
 
