--- a/css/styles.css
+++ b/css/styles.css
@@ -580,10 +580,14 @@ input, button{
     min-width: 165px;
     height: 40px;
     cursor: pointer;
-    margin-left: 287px;
-    top: 5px;
+    margin-left: 24px;
     font-family: "Roboto", sans-serif;
     border: none;
+    position: absolute;
+}
+
+.form-footer-icon{
+    fill: #ffffff;
 }
 
 /* ============== BACKDROP ============== */
@@ -618,7 +622,7 @@ input, button{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 72px 24px 24px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -642,6 +646,7 @@ input, button{
 .modal-close-btn:focus {
     background-color: #404bbf;
     border: none;
+    fill: #ffffff;
 }
 
 .modal-close-btn-icon {
@@ -692,26 +697,18 @@ input, button{
     padding-left: 38px;
 }
 
-.review-form-input:focus {
+.review-form-input:focus + .review-form-input-icon {
     border-color: #4D5AE5;
+    fill: #4D5AE5;
 }
 
 .review-form-input-icon {
     position: absolute;
     top: 50%;
-    /* left: 24px; */
     left: 16px;
     transform: translateY(-50%);
-    stroke: #404040;
+    fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.review-form-input-icon:focus{
-    fill: #4D5AE5;
-}
-
-.review-form-input:focus + .review-form-input-icon {
-    stroke: #4D5AE5;
 }
 
 .form-comment{
@@ -832,7 +829,7 @@ input, button{
 
 .review-form-submit-btn:hover,
 .review-form-submit-btn:focus {
-    /* fill: #ffffff; */
-    color: #4D5AE5;
+    color: #ffffff;
+    background-color: #404BBF;
 }
 
