--- a/css/styles.css
+++ b/css/styles.css
@@ -602,6 +602,7 @@ input, button{
     visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     opacity: 0;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .backdrop.is-open {
@@ -622,7 +623,7 @@ input, button{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 72px 24px 24px;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -698,7 +699,7 @@ input, button{
 }
 
 .review-form-input:focus + .review-form-input-icon {
-    border-color: #4D5AE5;
+    border-color: #4D5AE5; 
     fill: #4D5AE5;
 }
 
@@ -745,9 +746,6 @@ input, button{
 
 .review-form-checkbox:checked{
     background-color: var(--color3);
-}
-
-.review-form-own-checkbox:checked{
     border: none;
     fill: var(--color1);
 }
