--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,7 @@ input, button{
     padding-left: 38px;
 }
 
-.review-form-input:focus + .review-form-input-icon {
+.review-form-input:focus + .review-form-input-icon .review-form-input:active {
     border-color: #4D5AE5; 
     fill: #4D5AE5;
 }
@@ -789,14 +789,6 @@ input, button{
     fill: transparent;
 }
 
-.review-form-checkbox:checked
-    + .review-form-checkbox-label
-    > .review-form-own-checkbox {
-    background-color: #4D5AE5;
-    border-color: #4D5AE5;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
 .review-form-checkbox:focus
     + .review-form-checkbox-label
     > .review-form-own-checkbox {
@@ -810,9 +802,9 @@ input, button{
 
 .review-form-checkbox:checked
     + .review-form-checkbox-label
-    .review-form-own-checkbox-icon {
-    opacity: 1;
-}
+    .review-form-own-checkbox-icon{
+        opacity: 1;
+    }
 
 .review-form-submit-btn {
     min-width: 169px;
