--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,7 @@ input, button{
     padding-left: 38px;
 }
 
-.review-form-input:focus + .review-form-input-icon .review-form-input:active {
+.review-form-input:focus + .review-form-input-icon {
     border-color: #4D5AE5; 
     fill: #4D5AE5;
 }
