--- a/css/old-styles.css
+++ b/css/old-styles.css
@@ -263,7 +263,7 @@ input, button{
 
         /* /ADVANTAGE */
 
-        /* PAGE */
+        /* OUR TEAM */
 .page-team{
     background: #F4F4FD;
 }
@@ -335,7 +335,6 @@ input, button{
 .icon-item{
     width: 40px;
     height: 40px;
-    /* fill: #f4f4fd; */
 }
 
 .icon-team{
@@ -540,10 +539,6 @@ input, button{
     margin-bottom: 16px;
 }
 
-.form-footer-label{
-    /* position: relative; */
-}
-
 .form-footer-input{
     border-radius: 4px;
     border: 1px solid #FFF;
@@ -576,7 +571,6 @@ input, button{
     align-items: center; 
     text-align: center;
     padding: 8px 24px;
-    /* gap: 16px; */
     border-radius: 4px;
     background-color: #4D5AE5;
     font-size: 16px;
